Added API Service - Get Token - Game,Cover Models

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,9 @@ dependencies:
   easy_localization: ^3.0.0
   google_fonts: ^2.1.0
   http: ^0.13.4
-  get_it: ^7.2.0
+  flutter_dotenv: ^5.0.2
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -69,6 +71,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
