Shimmer Bug Fix - Added CachedNetworkImage Package

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   flutter_vector_icons: ^1.0.0
   shimmer: ^2.0.0
+  cached_network_image: ^3.2.0
 
 
 dev_dependencies:
