--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   shimmer: ^2.0.0
   cached_network_image: ^3.2.0
   youtube_player_flutter: ^8.0.0
-
+  url_launcher: ^6.0.17
 
 dev_dependencies:
   flutter_test:
