--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   cached_network_image: ^3.2.0
   youtube_player_flutter: ^8.0.0
   url_launcher: ^6.0.17
+  async: ^2.8.2
+
 
 dev_dependencies:
   flutter_test:
