--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   youtube_player_flutter: ^8.0.0
   url_launcher: ^6.0.17
   async: ^2.8.2
+  collection: ^1.15.0
 
 
 dev_dependencies:
